# plover-uinput

./: .gitignore  LICENSE  main.py  output.txt  pyproject.toml  readme.md  setup.cfg  shell.nix  symbols.py  wl-copy  xkb-test.py
.direnv/: nix-profile-24.05-n2g5cqwv8qf5p6vj  nix-profile-24.05-n2g5cqwv8qf5p6vj.rc
plover_uinput/: __init__.py  all_keys.py  keyboard_capture.py  keyboard_capture.py.py  keys.py  symbols.py
plover_uinput.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
