[metadata]
name = plover-uinput
version = 0.0.11
author = LilleAila
description = Plover output plugin for linux using evdev / uinput
long_description = file: readme.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/LilleAila/plover-uinput
keywords = plover plover_plugin

[options]
setup_requires =
  setuptools>=69.1.1
install_requires =
  plover>=4.0.0rc2
  evdev>=1.7.0
  xkbcommon>=0.8
python_requires = >=3.8
packages = plover_uinput

[options.entry_points]
plover.extension =
  plover_uinput = plover_uinput:Main
plover.output =
  plover_uinput = plover_uinput:KeyboardEmulation
